# Web_8_Homework

./: pyproject.toml
Part_1/: config.ini  main.py  pyproject.toml
Part_2/: consumer_email.py  consumer_sms.py  models.py  producer.py
